--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,8 +12,33 @@
     "grunt-cli": "~0.1.13",
     "grunt-connect-proxy": "^0.2.0",
     "grunt-connect-rewrite": "^0.2.2",
-    "grunt-contrib": "~0.7.0",
+    "grunt-contrib": "~0.10.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.0",
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-contrib-compress": "~0.7.0",
+    "grunt-contrib-concat": "0.4.0",
+    "grunt-contrib-connect": "~0.7.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-contrib-handlebars": "~0.7.0",
+    "grunt-contrib-htmlmin": "~0.2.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-jade": "~0.11.0",
+    "grunt-contrib-jasmine": "~0.6.0",
+    "grunt-contrib-jshint": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-nodeunit": "~0.3.0",
+    "grunt-contrib-qunit": "~0.4.0",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-sass": "~0.7.0",
+    "grunt-contrib-stylus": "~0.13.0",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-contrib-yuidoc": "~0.5.0",
+    "grunt-contrib-symlink": "~0.3.0",
     "grunt-html2js": "~0.1.3",
     "grunt-bump": "0.0.6",
     "grunt-htmlrefs": "~0.4.1",
@@ -21,5 +46,9 @@
     "grunt-lesslint": "~0.8.0",
     "grunt-manifest": "~0.4.0",
     "grunt-conventional-changelog": "~0.1.2"
+  },
+  "dependencies": {
+    "jpegtran-bin": "^4.0.0",
+    "phantomjs-prebuilt": "^2.1.16"
   }
 }
